--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,8 @@ dependencies:
   flutter_config: ^2.0.0
   freezed: ^2.3.5
   freezed_annotation: ^2.2.0
-  get_it: ^7.6.0
   intl: ^0.18.1
+  provider: ^6.0.5
   shared_preferences: ^2.1.2
 
 dev_dependencies:
